--- a/core/src/main/res/values/styles.xml
+++ b/core/src/main/res/values/styles.xml
@@ -45,4 +45,13 @@
     <item name="android:textAllCaps">true</item>
   </style>
 
+  <style name="NavigationDrawerItem" parent="Body2">
+    <item name="android:layout_width">match_parent</item>
+    <item name="android:layout_height">48dp</item>
+    <item name="android:drawablePadding">32dp</item>
+    <item name="android:paddingLeft">16dp</item>
+    <item name="android:paddingRight">16dp</item>
+    <item name="android:gravity">center_vertical</item>
+  </style>
+
 </resources>
