--- a/core/src/main/res/values/styles.xml
+++ b/core/src/main/res/values/styles.xml
@@ -53,5 +53,13 @@
     <item name="android:paddingRight">16dp</item>
     <item name="android:gravity">center_vertical</item>
   </style>
+  
+  <style name="SettingsCheckBox" parent="Subhead">
+    <item name="android:layout_width">match_parent</item>
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:layout_marginBottom">16dp</item>
+    <item name="android:textColor">@color/black54</item>
+    <item name="android:gravity">center_vertical</item>
+  </style>
 
 </resources>
