--- a/core/src/main/res/values/colors.xml
+++ b/core/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+  <color name="black87">#212121</color>
   <color name="black54">#737373</color>
   <color name="red">#F44336</color>
   <color name="pink">#E91E63</color>
