--- a/core/src/main/res/values/styles.xml
+++ b/core/src/main/res/values/styles.xml
@@ -58,7 +58,8 @@
     <item name="android:layout_width">match_parent</item>
     <item name="android:layout_height">wrap_content</item>
     <item name="android:layout_marginBottom">16dp</item>
-    <item name="android:textColor">@color/black54</item>
+    <item name="android:textColor">@color/black87</item>
+    <item name="android:paddingLeft">4dp</item>
     <item name="android:gravity">center_vertical</item>
   </style>
 
