--- a/core/src/main/res/values/colors.xml
+++ b/core/src/main/res/values/colors.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <color name="black87">#212121</color>
-  <color name="black54">#737373</color>
+  <!-- text -->
+  <color name="white87">#DEFFFFFF</color>
+  <color name="white54">#8AFFFFFF</color>
+  <color name="black87">#DE000000</color>
+  <color name="black54">#8A000000</color>
+
+  <!-- material 500 -->
   <color name="red">#F44336</color>
   <color name="pink">#E91E63</color>
   <color name="purple">#9C27B0</color>
