--- a/core/src/main/res/values/styles.xml
+++ b/core/src/main/res/values/styles.xml
@@ -56,8 +56,7 @@
   
   <style name="SettingsCheckBox" parent="Subhead">
     <item name="android:layout_width">match_parent</item>
-    <item name="android:layout_height">wrap_content</item>
-    <item name="android:layout_marginBottom">16dp</item>
+    <item name="android:layout_height">48dp</item>
     <item name="android:textColor">@color/black87</item>
     <item name="android:paddingLeft">4dp</item>
     <item name="android:gravity">center_vertical</item>
