Update - Simplify TintedBitmapDrawable factory methods Update - Bump library / build tool versions Update - Lower minSdk to 14
Gradle 2.7
Gradle build tools 1.4.0-beta3
Apt plugin 1.8
Play Services 8.1.0
Support libs 23.0.1
OkHttp 2.5.0
RxLifecycle 0.3.0
Jackson 2.6.2

--- a/droid-bootstrap/src/main/res/values/attrs.xml
+++ b/droid-bootstrap/src/main/res/values/attrs.xml
@@ -5,7 +5,7 @@
   </declare-styleable>
 
   <declare-styleable name="ExpandableCardView">
-    <attr name="target" format="reference"/>
-    <attr name="expanded" format="boolean"/>
+    <attr name="cardTarget" format="reference"/>
+    <attr name="cardExpanded" format="boolean"/>
   </declare-styleable>
 </resources>
